# STL_files_creator_primitive

./: .gitignore  15.11.2019  CMakeLists.txt  Cube.cpp  Cube.h  README.md  STLTriangle.cpp  STLTriangle.h  Sphere.cpp
src/: Command.h  Cube.h  STLTriangle.cpp  Sphere.cpp  Sphere.h  main.cpp
